--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,28 @@
 {
   "compilerOptions": {
+      "baseUrl": "./",
+    "paths": {
+      "assets/*": ["src/assets/*"],
+      "components/*": ["src/components/*"],
+      "context/*": ["src/context/*"],
+      "hooks/*": ["src/hooks/*"],
+      "layouts/*": ["src/layouts/*"],
+      "lib/*": ["src/lib/*"],
+      "pages/*": ["src/pages/*"],
+      "sections/*": ["src/sections/*"],
+      "services/*": ["src/services/*"],
+      "utils/*": ["src/utils/*"]
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+     "typeRoots": [
+      "node_modules/@types",
+      "src"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -23,5 +40,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src/global.d.ts",
+    "src/**/*"
+  ]
 }
