--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "client_management",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-   "start": "ts-node --project tsconfig.app.json src/main.tsx"
+    "start": "ts-node --project tsconfig.app.json src/main.tsx"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -22,8 +23,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
